micro/.metadata/.plugins/org.eclipse.cdt.ui/clase15-08.build.log
22:18:36 **** Incremental Build of configuration Debug for project clase15-08 ****
make -r -j4 all 
Building file: ../src/clase15-08.cpp
Building file: ../src/mtb.c
Building file: ../src/GPIO/GPIO.c
Invoking: MCU C++ Compiler
Invoking: MCU C Compiler
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/mtb.d" -MT"src/mtb.o" -MT"src/mtb.d" -o "src/mtb.o" "../src/mtb.c"
arm-none-eabi-c++ -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -I"C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc" -I"C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\src\GPIO" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fno-rtti -fno-exceptions -fmerge-constants -fmacro-prefix-map="../src/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/clase15-08.d" -MT"src/clase15-08.o" -MT"src/clase15-08.d" -o "src/clase15-08.o" "../src/clase15-08.cpp"
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -D__NEWLIB__ -DCORE_M0PLUS -D__MTB_BUFFER_SIZE=256 -D__USE_ROMDIVIDE -DCPP_USE_HEAP -D__LPC84X__ -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -fmerge-constants -fmacro-prefix-map="../src/GPIO/"= -mcpu=cortex-m0 -mthumb -fstack-usage -MMD -MP -MF"src/GPIO/GPIO.d" -MT"src/GPIO/GPIO.o" -MT"src/GPIO/GPIO.d" -o "src/GPIO/GPIO.o" "../src/GPIO/GPIO.c"
../src/GPIO/GPIO.c:8:11: fatal error: Defines.h: No such file or directory
    8 | #include  "Defines.h"
      |           ^~~~~~~~~~~
compilation terminated.
In file included from c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\sys\types.h:46,
                 from c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\stdio.h:61,
                 from C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/Defines.h:19,
                 from ../src/clase15-08.cpp:2:
c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\sys\_stdint.h:44:19: error: conflicting declaration 'typedef __int32_t int32_t'
   44 | typedef __int32_t int32_t ;
      |                   ^~~~~~~
In file included from ../src/clase15-08.cpp:2:
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/Defines.h:15:16: note: previous declaration as 'typedef int int32_t'
   15 | typedef int    int32_t;
      |                ^~~~~~~
In file included from c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\sys\types.h:46,
                 from c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\stdio.h:61,
                 from C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/Defines.h:19,
                 from ../src/clase15-08.cpp:2:
c:\nxp\mcuxpressoide_11.7.1_9221\ide\plugins\com.nxp.mcuxpresso.tools.win32_11.7.1.202301190959\tools\arm-none-eabi\include\sys\_stdint.h:48:20: error: conflicting declaration 'typedef __uint32_t uint32_t'
   48 | typedef __uint32_t uint32_t ;
      |                    ^~~~~~~~
In file included from ../src/clase15-08.cpp:2:
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/Defines.h:16:23: note: previous declaration as 'typedef unsigned int uint32_t'
   16 | typedef unsigned int  uint32_t;
      |                       ^~~~~~~~
In file included from C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/LPC845.h:140,
                 from C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/Defines.h:21,
                 from ../src/clase15-08.cpp:2:
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h: In function 'void __NVIC_DisableIRQ(IRQn_Type)':
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h:772:5: error: '__DSB' was not declared in this scope
  772 |     __DSB();
      |     ^~~~~
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h:773:5: error: '__ISB' was not declared in this scope
  773 |     __ISB();
      |     ^~~~~
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h: In function 'void __NVIC_SystemReset()':
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h:923:3: error: '__DSB' was not declared in this scope
  923 |   __DSB();                                                          /* Ensure all outstanding memory accesses included
      |   ^~~~~
C:\Users\notebook\Documents\INFO II 2023\micro\clase15-08\inc/core_cm0plus.h:931:5: error: '__NOP' was not declared in this scope
  931 |     __NOP();
      |     ^~~~~
../src/clase15-08.cpp: In function 'int main()':
../src/clase15-08.cpp:16:14: warning: unused variable 'cont' [-Wunused-variable]
   16 |  uint32_t i, cont = 0, flag = 0;
      |              ^~~~
../src/clase15-08.cpp:16:24: warning: unused variable 'flag' [-Wunused-variable]
   16 |  uint32_t i, cont = 0, flag = 0;
      |                        ^~~~
make[1]: *** [src/GPIO/subdir.mk:20: src/GPIO/GPIO.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [src/subdir.mk:47: src/clase15-08.o] Error 1
Finished building: ../src/mtb.c
 
make: *** [makefile:52: all] Error 2
"make -r -j4 all" terminated with exit code 2. Build might be incomplete.

22:18:37 Build Failed. 11 errors, 2 warnings. (took 965ms)

